--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "dependencies": {
     "ajv": "^8.5.0"
   },
-  "type": "module"
+  "scripts": {
+    "test": "jest"
+  },
+  "type": "module",
+  "devDependencies": {
+    "jest": "^27.0.4"
+  }
 }
